disks/pc/windows/2.11/README.md
---
layout: page
title: Microsoft Windows 2.11
permalink: /disks/pc/windows/2.11/
---

Microsoft Windows 2.11, like [Windows 2.10](/disks/pc/windows/2.10/), was again released as two separate products:

* [Windows/286 2.11](#microsoft-windows286-211)
* [Windows/386 2.11](#microsoft-windows386-211)

Microsoft Windows/286 2.11
---

Windows/286 2.11 was finalized on March 13, 1989.

Directory listings of the four 1.2Mb distribution diskettes are provided below.

### Directory of Windows/286 2.11 (SETUP)

	 Volume in drive A is SET_BLD_DSP

	Directory of A:\

	8514     FON     11360 03-13-89  12:00a
	8514     DRV     37328 03-13-89  12:00a
	8514US   FON     12672 03-13-89  12:00a
	ATTDC    GRB      3407 03-13-89  12:00a
	ATTDC    DRV     28736 03-13-89  12:00a
	ATTDC    LGO       651 03-13-89  12:00a
	ATTDEB   DRV     27920 03-13-89  12:00a
	ATTSYS   DRV      3012 03-13-89  12:00a
	CGA      LGO       468 03-13-89  12:00a
	CGA      DRV     24784 03-13-89  12:00a
	CGA      GRB      2672 03-13-89  12:00a
	COMM     DRV      4516 03-13-89  12:00a
	EGA      SYS      3328 03-13-89  12:00a
	EGAHIBW  DRV     26848 03-13-89  12:00a
	EGAHIRES DRV     33040 03-13-89  12:00a
	EGAHIRES GRB      3574 03-13-89  12:00a
	EGALORES DRV     30208 03-13-89  12:00a
	EGAMONO  GRB      3407 03-13-89  12:00a
	EGAMONO  LGO       446 03-13-89  12:00a
	EGAMONO  DRV     26960 03-13-89  12:00a
	FONTHI   FON      4608 03-13-89  12:00a
	FONTHIUS FON      4528 03-13-89  12:00a
	FONTLO   FON      4160 03-13-89  12:00a
	FONTLOUS FON      4528 03-13-89  12:00a
	FONTSQ   FON      5728 03-13-89  12:00a
	FONTSQCA FON      5552 03-13-89  12:00a
	FONTSQES FON      5552 03-13-89  12:00a
	FONTSQNO FON      5552 03-13-89  12:00a
	FONTSQPO FON      5552 03-13-89  12:00a
	FONTSQUS FON      5536 03-13-89  12:00a
	GDI      EXE    101770 03-13-89  12:00a
	HERCULES LGO       557 03-13-89  12:00a
	HERCULES GRB      2615 03-13-89  12:00a
	HERCULES DRV     28272 03-13-89  12:00a
	HIMEM    SYS      6261 03-13-89  12:00a
	HPMOUSE  DRV      4410 03-13-89  12:00a
	HPSYSTEM DRV      9390 03-13-89  12:00a
	KBDBE    DRV      8790 03-13-89  12:00a
	KBDCA    DRV      9030 03-13-89  12:00a
	KBDDA    DRV      8498 03-13-89  12:00a
	KBDES    DRV      9468 03-13-89  12:00a
	KBDFR    DRV      8706 03-13-89  12:00a
	KBDFS    DRV      8530 03-13-89  12:00a
	KBDGR    DRV      8690 03-13-89  12:00a
	KBDIT    DRV      8330 03-13-89  12:00a
	KBDLA    DRV      8824 03-13-89  12:00a
	KBDNE    DRV      8530 03-13-89  12:00a
	KBDNO    DRV      8514 03-13-89  12:00a
	KBDPO    DRV      8116 03-13-89  12:00a
	KBDSF    DRV      8786 03-13-89  12:00a
	KBDSG    DRV      8762 03-13-89  12:00a
	KBDSP    DRV      8856 03-13-89  12:00a
	KBDUK    DRV      8272 03-13-89  12:00a
	KBDUS    DRV      8096 03-13-89  12:00a
	KERNEL   EXE     58992 03-13-89  12:00a
	MOUSE    DRV      3667 03-13-89  12:00a
	MSDOS    EXE     46224 03-13-89  12:00a
	MSDOSD   EXE      6586 03-13-89  12:00a
	MSLOGO   LGD      2574 03-13-89  12:00a
	MSMOUSE1 DRV      2014 03-13-89  12:00a
	MSMOUSE2 DRV      2014 03-13-89  12:00a
	NOMOUSE  DRV      1245 03-13-89  12:00a
	SETUP    EXE     64853 03-13-89  12:00a
	SETUP    INF     22137 03-13-89  12:00a
	SOUND    DRV      5309 03-13-89  12:00a
	SYSTEM   DRV      2945 03-13-89  12:00a
	USERF    EXE    154512 03-13-89  12:00a
	USERS    EXE    156048 03-13-89  12:00a
	WIN      INI      2194 03-13-89  12:00a
	WIN      CNF      2480 03-13-89  12:00a
	       70 file(s)    1170500 bytes

	Total files listed:
	       70 file(s)    1170500 bytes
	                       27136 bytes free

### Directory of Windows/286 2.11 (UTIL 1)

	 Volume in drive A is DISP2_UTIL1

	Directory of A:\

	ATRIS    DRV     15760 03-13-89  12:00a
	ATRIS    GRB      1424 03-13-89  12:00a
	ATRIS    LGO      2950 03-13-89  12:00a
	ATTMOUSE DRV      2086 03-13-89  12:00a
	COMPAQ   DRV     28144 03-13-89  12:00a
	DESKJET  DRV     76096 03-13-89  12:00a
	EISHR    GRB      2686 03-13-89  12:00a
	EISHR    LGO       447 03-13-89  12:00a
	EISHRC   DRV     29680 03-13-89  12:00a
	EISHRM   DRV     29680 03-13-89  12:00a
	EISHRR   DRV     29680 03-13-89  12:00a
	EPSON24  DRV     50272 03-13-89  12:00a
	EPSON9   DRV     43776 03-13-89  12:00a
	FUJIMTRX DRV     48576 03-13-89  12:00a
	GENIUS   LGO      5460 03-13-89  12:00a
	GENIUS   GRB      1350 03-13-89  12:00a
	GENIUS   DRV     25760 03-13-89  12:00a
	HPPCL    DRV    221264 03-13-89  12:00a
	HPPLOT   DRV     62992 03-13-89  12:00a
	IBMGRX   DRV     14512 03-13-89  12:00a
	IBMPS230 DRV     26496 03-13-89  12:00a
	IBMPS250 DRV     32720 03-13-89  12:00a
	LMOUSE   DRV      3298 03-13-89  12:00a
	MULTIMOD DRV     28256 03-13-89  12:00a
	MULTIMOD GRB      3467 03-13-89  12:00a
	NECCOLOR DRV     28896 03-13-89  12:00a
	NEFTIS   LGO      2934 03-13-89  12:00a
	NEFTIS   DRV     15776 03-13-89  12:00a
	NEFTIS   GRB      1250 03-13-89  12:00a
	OKI24    DRV     45680 03-13-89  12:00a
	OLIPRINT DRV     37472 03-13-89  12:00a
	PAINTJET DRV     45536 03-13-89  12:00a
	PROPRINT DRV     35616 03-13-89  12:00a
	PROPRN24 DRV     34480 03-13-89  12:00a
	READMEE2 TXT      1083 03-13-89  12:00a
	READMEE9 TXT      1228 03-13-89  12:00a
	READMEFU TXT      1106 03-13-89  12:00a
	READMEHP TXT      5972 03-13-89  12:00a
	READMENE TXT      1180 03-13-89  12:00a
	READMEO2 TXT      1002 03-13-89  12:00a
	READMEOL TXT      1989 03-13-89  12:00a
	READMEP2 TXT       955 03-13-89  12:00a
	READMEP9 TXT       978 03-13-89  12:00a
	READMEPJ TXT     14274 03-13-89  12:00a
	READMEPL TXT     15594 03-13-89  12:00a
	TANDYDSP LGO       541 03-13-89  12:00a
	TANDYDSP DRV     25840 03-13-89  12:00a
	TANDYKBD DRV      4318 03-13-89  12:00a
	TANDYSND DRV      5856 03-13-89  12:00a
	WY700    FON     11360 03-13-89  12:00a
	WY700US  FON     11376 03-13-89  12:00a
	WYSE700  GRB      2453 03-13-89  12:00a
	WYSE700  DRV     28928 03-13-89  12:00a
	WYSE700  LGO       468 03-13-89  12:00a
	       54 file(s)    1170973 bytes

	Total files listed:
	       54 file(s)    1170973 bytes
	                       30720 bytes free

### Directory of Windows/286 2.11 (UTIL 2)

	 Volume in drive A is UTIL2_FONTS

	Directory of A:\

	A4TRAY   TXT       944 03-13-89  12:00a
	AEMM     TXT      1764 03-13-89  12:00a
	AEMM     SYS     14643 03-13-89  12:00a
	COURA    FON     14144 03-13-89  12:00a
	COURB    FON     19088 03-13-89  12:00a
	COURC    FON     13040 03-13-89  12:00a
	COURD    FON     21328 03-13-89  12:00a
	COURE    FON     23808 03-13-89  12:00a
	DM600    DRV     32224 03-13-89  12:00a
	EMM      TXT     16470 03-13-89  12:00a
	EMM      SYS     54720 03-13-89  12:00a
	HELVA    FON     36768 03-13-89  12:00a
	HELVB    FON     50880 03-13-89  12:00a
	HELVC    FON     38960 03-13-89  12:00a
	HELVD    FON     58144 03-13-89  12:00a
	HELVE    FON     64784 03-13-89  12:00a
	MEMSET   EXE     36099 03-13-89  12:00a
	MODERN   FON      7584 03-13-89  12:00a
	NEWFON   EXE     33231 03-13-89  12:00a
	PCLASER  DRV     33504 03-13-89  12:00a
	PS2EMM   TXT     15547 03-13-89  12:00a
	PS2EMM   SYS     13584 03-13-89  12:00a
	PSCRIPT  DRV    205136 03-13-89  12:00a
	QWIII    DRV     48480 03-13-89  12:00a
	RAMDRIVE SYS      8358 03-13-89  12:00a
	RAMDRIVE TXT      7198 03-13-89  12:00a
	READMEPS TXT      8151 03-13-89  12:00a
	REMM     TXT      5879 03-13-89  12:00a
	REMM     SYS     14844 03-13-89  12:00a
	ROMAN    FON     11120 03-13-89  12:00a
	SCRIPT   FON     10304 03-13-89  12:00a
	SETENHKB COM        14 03-13-89  12:00a
	SMARTDRV SYS     10224 03-13-89  12:00a
	THINKJET DRV     13296 03-13-89  12:00a
	TMSRA    FON     35392 03-13-89  12:00a
	TMSRB    FON     45936 03-13-89  12:00a
	TMSRC    FON     37824 03-13-89  12:00a
	TMSRD    FON     57184 03-13-89  12:00a
	TMSRE    FON     58304 03-13-89  12:00a
	TTY      DRV      6224 03-13-89  12:00a
	       40 file(s)    1185126 bytes

	Total files listed:
	       40 file(s)    1185126 bytes
	                       19968 bytes free

### Directory of Windows/286 2.11 (APPS)

	 Volume in drive A is APPS_WRITE 

	Directory of A:\

	PIF          <DIR>     03-13-89  12:00a
	ABC      TXT        42 03-13-89  12:00a
	APPLETLK DLL     19136 03-13-89  12:00a
	AT&TREAD TXT      8442 03-13-89  12:00a
	CALC     EXE     28000 03-13-89  12:00a
	CALENDAR EXE     38896 03-13-89  12:00a
	CARDFILE EXE     39264 03-13-89  12:00a
	CITOH    DRV     14208 03-13-89  12:00a
	CLIPBRD  EXE     10800 03-13-89  12:00a
	CLOCK    EXE      8960 03-13-89  12:00a
	CONTROL  EXE     58064 03-13-89  12:00a
	CVTPAINT EXE      5712 03-13-89  12:00a
	DOTHIS   TXT       493 03-13-89  12:00a
	EISOLDAP MOD     61472 03-13-89  12:00a
	IBMCOLOR DRV     14144 03-13-89  12:00a
	LBP8US   DRV     65664 03-13-89  12:00a
	NECP2    DRV     14352 03-13-89  12:00a
	NOTEPAD  EXE     19072 03-13-89  12:00a
	PAINT    EXE     93280 03-13-89  12:00a
	PIFEDIT  EXE     30288 03-13-89  12:00a
	PRACTICE WRI      2944 03-13-89  12:00a
	README   TXT     16383 03-13-89  12:00a
	READMETO TXT      8601 03-13-89  12:00a
	REVERSI  EXE     15552 03-13-89  12:00a
	SPOOLER  EXE     14336 03-13-89  12:00a
	SV400A   GRB      3658 03-13-89  12:00a
	SV400A   DRV     33056 03-13-89  12:00a
	TERMINAL EXE     48640 03-13-89  12:00a
	TI850    DRV     12816 03-13-89  12:00a
	TOSH24   DRV     77040 03-13-89  12:00a
	TOSH24   FIF      5588 03-13-89  12:00a
	WINOLDAP MOD     60464 03-13-89  12:00a
	WRITE    EXE    198368 03-13-89  12:00a
	XER4020  DRV     22032 03-13-89  12:00a
	       34 file(s)    1049767 bytes

	Directory of A:\PIF

	.            <DIR>     03-13-89  12:00a
	..           <DIR>     03-13-89  12:00a
	123      PIF       369 03-13-89  12:00a
	ACCESS   PIF       369 03-13-89  12:00a
	BASIC    PIF       369 03-13-89  12:00a
	BASICA   PIF       369 03-13-89  12:00a
	CHART    PIF       369 03-13-89  12:00a
	CLOUT    PIF       369 03-13-89  12:00a
	DBASE    PIF       369 03-13-89  12:00a
	DW3PG    PIF       369 03-13-89  12:00a
	EDITOR   PIF       369 03-13-89  12:00a
	FILE     PIF       369 03-13-89  12:00a
	FL       PIF       369 03-13-89  12:00a
	FW       PIF       369 03-13-89  12:00a
	GRAPH    PIF       369 03-13-89  12:00a
	HTPM     PIF       369 03-13-89  12:00a
	LOTUS    PIF       369 03-13-89  12:00a
	MP       PIF       369 03-13-89  12:00a
	MPWIN    PIF       369 03-13-89  12:00a
	PE2      PIF       369 03-13-89  12:00a
	PFSACCES PIF       369 03-13-89  12:00a
	PLAN     PIF       369 03-13-89  12:00a
	PROJ     PIF       369 03-13-89  12:00a
	QB       PIF       369 03-13-89  12:00a
	RB5000   PIF       369 03-13-89  12:00a
	RBASE    PIF       369 03-13-89  12:00a
	REPORT   PIF       369 03-13-89  12:00a
	SC4      PIF       369 03-13-89  12:00a
	SCOM     PIF       369 03-13-89  12:00a
	SPELL    PIF       369 03-13-89  12:00a
	SYMPHONY PIF       369 03-13-89  12:00a
	TURBO    PIF       369 03-13-89  12:00a
	VW3      PIF       369 03-13-89  12:00a
	WORD     PIF       369 03-13-89  12:00a
	WORKS    PIF       369 03-13-89  12:00a
	WRDPERF  PIF       369 03-13-89  12:00a
	WRITE    PIF       369 03-13-89  12:00a
	WS2      PIF       369 03-13-89  12:00a
	XTALK    PIF       369 03-13-89  12:00a
	       39 file(s)      13653 bytes

	Total files listed:
	       73 file(s)    1063420 bytes
	                      134656 bytes free

Microsoft Windows/386 2.11
---

Windows/386 2.11 was also finalized on March 13, 1989.

Directory listings of the four 1.2Mb distribution diskettes are provided below.

### Directory of Windows/386 2.11 (SETUP)

	 Volume in drive A is SET_BLD_DSP

	Directory of A:\

	386LOGO  LGD      2574 03-13-89  12:00a
	CGA      386    122836 03-13-89  12:00a
	CGA      3EX     37148 03-13-89  12:00a
	CGA      DRV     24784 03-13-89  12:00a
	CGA      GRB      5614 03-13-89  12:00a
	CGA      LGO       468 03-13-89  12:00a
	COMM     DRV      4516 03-13-89  12:00a
	COMPAQ   DRV     28144 03-13-89  12:00a
	EGA      3EX     37404 03-13-89  12:00a
	EGA      386    140571 03-13-89  12:00a
	EGA      GRB      7979 03-13-89  12:00a
	EGAHIRES DRV     33040 03-13-89  12:00a
	FONTHI   FON      4608 03-13-89  12:00a
	FONTHIUS FON      4528 03-13-89  12:00a
	FONTLO   FON      4160 03-13-89  12:00a
	FONTLOUS FON      4528 03-13-89  12:00a
	FONTSQ   FON      5728 03-13-89  12:00a
	FONTSQCA FON      5552 03-13-89  12:00a
	FONTSQES FON      5552 03-13-89  12:00a
	FONTSQNO FON      5552 03-13-89  12:00a
	FONTSQPO FON      5552 03-13-89  12:00a
	FONTSQUS FON      5536 03-13-89  12:00a
	GDI      EXE    101770 03-13-89  12:00a
	HIMEM    SYS      6261 03-13-89  12:00a
	HPMOUSE  DRV      4410 03-13-89  12:00a
	IDC      GRB      5715 03-13-89  12:00a
	KBDBE    DRV      8790 03-13-89  12:00a
	KBDCA    DRV      9030 03-13-89  12:00a
	KBDDA    DRV      8498 03-13-89  12:00a
	KBDES    DRV      9468 03-13-89  12:00a
	KBDFR    DRV      8706 03-13-89  12:00a
	KBDFS    DRV      8530 03-13-89  12:00a
	KBDGR    DRV      8690 03-13-89  12:00a
	KBDIT    DRV      8330 03-13-89  12:00a
	KBDLA    DRV      8824 03-13-89  12:00a
	KBDNE    DRV      8530 03-13-89  12:00a
	KBDNO    DRV      8514 03-13-89  12:00a
	KBDPO    DRV      8116 03-13-89  12:00a
	KBDSF    DRV      8786 03-13-89  12:00a
	KBDSG    DRV      8762 03-13-89  12:00a
	KBDSP    DRV      8856 03-13-89  12:00a
	KBDUK    DRV      8272 03-13-89  12:00a
	KBDUS    DRV      8096 03-13-89  12:00a
	KERNEL   EXE     58992 03-13-89  12:00a
	LMOUSE   DRV      3298 03-13-89  12:00a
	MOUSE    DRV      3667 03-13-89  12:00a
	MSDOS    EXE     46224 03-13-89  12:00a
	MSDOSD   EXE      6586 03-13-89  12:00a
	MSMOUSE1 DRV      2014 03-13-89  12:00a
	MSMOUSE2 DRV      2014 03-13-89  12:00a
	NOMOUSE  DRV      1245 03-13-89  12:00a
	SETUP    EXE     64853 03-13-89  12:00a
	SETUP    INF     21776 03-13-89  12:00a
	SOUND    DRV      5309 03-13-89  12:00a
	SYSTEM   DRV      2945 03-13-89  12:00a
	USERF    EXE    154512 03-13-89  12:00a
	VGA      GRB      8605 03-13-89  12:00a
	VGA450   DRV     32736 03-13-89  12:00a
	WIN      CNF      2480 03-13-89  12:00a
	WIN      INI      3207 03-13-89  12:00a
	       60 file(s)    1181791 bytes

	Total files listed:
	       60 file(s)    1181791 bytes
	                       18944 bytes free

### Directory of Windows/386 2.11 (UTIL 1)

	 Volume in drive A is DISP2_UTIL1

	Directory of A:\

	ATTDC    DRV     28736 03-13-89  12:00a
	CTVGA    386    141195 03-13-89  12:00a
	CTVGA    3EX     37500 03-13-89  12:00a
	DESKJET  DRV     76096 03-13-89  12:00a
	EPSON24  DRV     50272 03-13-89  12:00a
	EPSON9   DRV     43776 03-13-89  12:00a
	FUJIMTRX DRV     48576 03-13-89  12:00a
	HERCULES LGO       557 03-13-89  12:00a
	HERCULES DRV     28272 03-13-89  12:00a
	HERCULES GRB      4743 03-13-89  12:00a
	HERCULES 386    120634 03-13-89  12:00a
	HERCULES 3EX     37196 03-13-89  12:00a
	HPPCL    DRV    221264 03-13-89  12:00a
	HPPLOT   DRV     62992 03-13-89  12:00a
	IBMGRX   DRV     14512 03-13-89  12:00a
	LBP8US   DRV     65664 03-13-89  12:00a
	NECCOLOR DRV     28896 03-13-89  12:00a
	NECP2    DRV     14352 03-13-89  12:00a
	OKI24    DRV     45680 03-13-89  12:00a
	OLIPRINT DRV     37472 03-13-89  12:00a
	PAINTJET DRV     45536 03-13-89  12:00a
	READMEE2 TXT      1083 03-13-89  12:00a
	READMEE9 TXT      1228 03-13-89  12:00a
	READMEFU TXT      1106 03-13-89  12:00a
	READMEHP TXT      5972 03-13-89  12:00a
	READMENE TXT      1180 03-13-89  12:00a
	READMEO2 TXT      1002 03-13-89  12:00a
	READMEOL TXT      1989 03-13-89  12:00a
	READMEPJ TXT     14274 03-13-89  12:00a
	READMEPL TXT     15594 03-13-89  12:00a
	TTY      DRV      6224 03-13-89  12:00a
	       31 file(s)    1203573 bytes

	Total files listed:
	       31 file(s)    1203573 bytes
	                        1024 bytes free

### Directory of Windows/386 2.11 (UTIL 2)

	 Volume in drive A is UTIL2_FONTS

	Directory of A:\

	A4TRAY   TXT       944 03-13-89  12:00a
	CGA40    FON      6544 03-13-89  12:00a
	CGA80    FON      4512 03-13-89  12:00a
	CITOH    DRV     14208 03-13-89  12:00a
	COURA    FON     14144 03-13-89  12:00a
	COURB    FON     19088 03-13-89  12:00a
	COURC    FON     13040 03-13-89  12:00a
	COURD    FON     21328 03-13-89  12:00a
	COURE    FON     23808 03-13-89  12:00a
	DM600    DRV     32224 03-13-89  12:00a
	EGA40    FON      8576 03-13-89  12:00a
	EGA80    FON      5520 03-13-89  12:00a
	HELVA    FON     36768 03-13-89  12:00a
	HELVB    FON     50880 03-13-89  12:00a
	HELVC    FON     38960 03-13-89  12:00a
	HELVD    FON     58144 03-13-89  12:00a
	HELVE    FON     64784 03-13-89  12:00a
	HERCULES FON      9104 03-13-89  12:00a
	IBMCOLOR DRV     14144 03-13-89  12:00a
	MEMSET   EXE     36099 03-13-89  12:00a
	MODERN   FON      7584 03-13-89  12:00a
	NEWFON   EXE     33231 03-13-89  12:00a
	PROPRINT DRV     35616 03-13-89  12:00a
	PROPRN24 DRV     34480 03-13-89  12:00a
	PSCRIPT  DRV    205136 03-13-89  12:00a
	QWIII    DRV     48480 03-13-89  12:00a
	RAMDRIVE SYS      8358 03-13-89  12:00a
	RAMDRIVE TXT      7198 03-13-89  12:00a
	READMEP2 TXT       955 03-13-89  12:00a
	READMEP9 TXT       978 03-13-89  12:00a
	READMEPS TXT      8151 03-13-89  12:00a
	ROMAN    FON     11120 03-13-89  12:00a
	SCRIPT   FON     10304 03-13-89  12:00a
	SETENHKB COM        14 03-13-89  12:00a
	SMARTDRV SYS     10224 03-13-89  12:00a
	THINKJET DRV     13296 03-13-89  12:00a
	TI850    DRV     12816 03-13-89  12:00a
	TMSRA    FON     35392 03-13-89  12:00a
	TMSRB    FON     45936 03-13-89  12:00a
	TMSRC    FON     37824 03-13-89  12:00a
	TMSRD    FON     57184 03-13-89  12:00a
	TMSRE    FON     58304 03-13-89  12:00a
	WIN386   PS2       138 03-13-89  12:00a
	       43 file(s)    1155538 bytes

	Total files listed:
	       43 file(s)    1155538 bytes
	                       49664 bytes free

### Directory of Windows/386 2.11 (APPS)

	 Volume in drive A is APPS_WRITE 

	Directory of A:\

	PIF          <DIR>     03-13-89  12:00a
	8514     386    142432 03-13-89  12:00a
	8514     GRB     10861 03-13-89  12:00a
	8514     DRV     37328 03-13-89  12:00a
	8514     3EX     37404 03-13-89  12:00a
	8514     FON     11360 03-13-89  12:00a
	8514US   FON     12672 03-13-89  12:00a
	ABC      TXT        42 03-13-89  12:00a
	APPLETLK DLL     19136 03-13-89  12:00a
	AT&TREAD TXT      3428 03-13-89  12:00a
	CALC     EXE     28000 03-13-89  12:00a
	CALENDAR EXE     38896 03-13-89  12:00a
	CARDFILE EXE     39264 03-13-89  12:00a
	CLIPBRD  EXE     10800 03-13-89  12:00a
	CLOCK    EXE      8960 03-13-89  12:00a
	COMMANDE PIF       369 03-13-89  12:00a
	COMMANDF PIF       369 03-13-89  12:00a
	COMMANDW PIF       369 03-13-89  12:00a
	CONTROL  EXE     58064 03-13-89  12:00a
	CVTPAINT EXE      5712 03-13-89  12:00a
	DOTHIS   TXT       493 03-13-89  12:00a
	NOTEPAD  EXE     19072 03-13-89  12:00a
	PAINT    EXE     93280 03-13-89  12:00a
	PCLASER  DRV     33504 03-13-89  12:00a
	PIFEDIT  EXE     26480 03-13-89  12:00a
	PRACTICE WRI      2944 03-13-89  12:00a
	README   TXT     14351 03-13-89  12:00a
	READMETO TXT      8601 03-13-89  12:00a
	REVERSI  EXE     15552 03-13-89  12:00a
	SPOOLER  EXE     14336 03-13-89  12:00a
	TERMINAL EXE     48640 03-13-89  12:00a
	TOSH24   FIF      5588 03-13-89  12:00a
	TOSH24   DRV     77040 03-13-89  12:00a
	WINOLDAP MOD     31568 03-13-89  12:00a
	WRITE    EXE    198368 03-13-89  12:00a
	XER4020  DRV     22032 03-13-89  12:00a
	       36 file(s)    1077315 bytes

	Directory of A:\PIF

	.            <DIR>     03-13-89  12:00a
	..           <DIR>     03-13-89  12:00a
	123      PIF       369 03-13-89  12:00a
	ACCESS   PIF       369 03-13-89  12:00a
	BASIC    PIF       369 03-13-89  12:00a
	BASICA   PIF       369 03-13-89  12:00a
	BOOKS    PIF       369 03-13-89  12:00a
	CHART    PIF       369 03-13-89  12:00a
	CLOUT    PIF       369 03-13-89  12:00a
	DBASE    PIF       369 03-13-89  12:00a
	DW3PG    PIF       369 03-13-89  12:00a
	EDITOR   PIF       369 03-13-89  12:00a
	FILE     PIF       369 03-13-89  12:00a
	FL       PIF       369 03-13-89  12:00a
	FW       PIF       369 03-13-89  12:00a
	GRAPH    PIF       369 03-13-89  12:00a
	HTPM     PIF       369 03-13-89  12:00a
	LOTUS    PIF       369 03-13-89  12:00a
	MP       PIF       369 03-13-89  12:00a
	PE2      PIF       369 03-13-89  12:00a
	PFSACCES PIF       369 03-13-89  12:00a
	PLAN     PIF       369 03-13-89  12:00a
	PROJ     PIF       369 03-13-89  12:00a
	QB       PIF       369 03-13-89  12:00a
	RB5000   PIF       369 03-13-89  12:00a
	RBASE    PIF       369 03-13-89  12:00a
	READY    PIF       369 03-13-89  12:00a
	REPORT   PIF       369 03-13-89  12:00a
	SC4      PIF       369 03-13-89  12:00a
	SCOM     PIF       369 03-13-89  12:00a
	SK       PIF       369 03-13-89  12:00a
	SPELL    PIF       369 03-13-89  12:00a
	SYMPHONY PIF       369 03-13-89  12:00a
	TURBO    PIF       369 03-13-89  12:00a
	VW3      PIF       369 03-13-89  12:00a
	WORD     PIF       369 03-13-89  12:00a
	WORKS    PIF       369 03-13-89  12:00a
	WRDPERF  PIF       369 03-13-89  12:00a
	WRITE    PIF       369 03-13-89  12:00a
	WS2      PIF       369 03-13-89  12:00a
	XTALK    PIF       369 03-13-89  12:00a
	       41 file(s)      14391 bytes

	Total files listed:
	       77 file(s)    1091706 bytes
	                      106496 bytes free
